<resources>
    <string name="app_name">GastoViagem</string>
    <string name="kilometers_per_liter">KMs por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="price">Preço</string>
    <string name="total_kilometers">Total de quilomêtros</string>
    <string name="distance">Distâcia</string>
    <string name="total_value">Gasto total será de:</string>
    <string name="calculate">Calcular</string>
    <string name="final_price">R$ 0</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>